--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.0.2",
     "react-autosuggest": "^3.7.3",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-bootstrap-table": "^3.1.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.0",
