--- a/packages/react-atlas-core/package.json
+++ b/packages/react-atlas-core/package.json
@@ -24,7 +24,8 @@
     "normalize.css": "^4.1.1",
     "react": "^15.0.2",
     "react-autosuggest": "^3.7.3",
-    "react-dom": "^15.0.2"
+    "react-dom": "^15.0.2",
+    "react-bootstrap-table": "3.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
