--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "author": "Digital River Experience Engineering (https://github.com/orgs/DigitalRiver/teams/experience-engineering)",
   "main": "./lib",
   "scripts": {
-    "test": "jest",
+    "test": "jest --testRegex=packages/react-atlas-tests/dropdown/__tests__/dropdown.test.js --colors",
     "coverage": "jest --coverage",
-    "format": "prettier packages/react-atlas-core/src/**/*.js packages/react-atlas-core/src/**/**/*.js packages/react-atlas/src/**/*.js packages/react-atlas-default-theme/src/**/*.js packages/react-atlas-tests/**/*.js --write",
-    "lint": "eslint packages/react-atlas-core/src/**/*.js packages/react-atlas-core/src/**/**/*.js packages/react-atlas-default-theme/src/**/*.js --fix",
+    "format": "prettier packages/react-atlas-core/src/Dropdown/*.js packages/react-atlas-core/src/Dropdown/**/*.js packages/react-atlas/src/Dropdown/*.js packages/react-atlas-default-theme/src/Dropdown/*.js packages/react-atlas-tests/Dropdown/*.js --write",
+    "lint": "eslint packages/react-atlas-core/src/Dropdown/*.js packages/react-atlas-core/src/Dropdown/Dropdown/*.js packages/react-atlas-default-theme/src/Dropdown/*.js --fix",
     "format-lint": "npm run format && npm run lint",
     "lerna:init": "lerna init",
     "lerna:bootstrap": "lerna bootstrap",
@@ -25,14 +25,6 @@
     "docs:dev": "cross-env NODE_ENV=development node packages/react-atlas/src/codegen.js && cd packages/react-atlas && npm run styleguide",
     "docs:build": "cross-env NODE_ENV=development node packages/react-atlas/src/codegen.js && cd packages/react-atlas && npm run styleguide:build",
     "gh-pages:publish": "scripts/node gh-pages.js"
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "packages/react-atlas-core/src/**/*.js"
-    ],
-    "moduleNameMapper": {
-      "\\.(css|less)$": "identity-obj-proxy"
-    }
   },
   "bugs": {
     "url": "https://github.com/DigitalRiver/react-atlas/issues"
